# spotlight

./: .gitignore  1020_re.xlsx  2_re.xlsx  GL_RECON.xlsx  GL_RECON_MONTH.xlsx  MEMO.py  README.md  RECON.tsv  a.py  a.xlsx  dfasdf  pyproject.toml  run.py  test.csv  test.txt
SQL/: CreateTable.SQL
Tool/: ANSI.reg  Excel2TSV.xlsb  Integrity Check.xlsx  TableDef.xlsx  regex.py
spotlight/: __init__.py  main.py
spotlight/automap/: automap.py
spotlight/common/: ErrRetry.py  ForSAP.py  colors.py  common.py  const.py  myFileDialog.py  protoSelector.py  view.py
spotlight/concatText/: __init__.py  concatText.py  concatTextTest.py
spotlight/import2df/: __init__.py  import2df.py  import2dfInfo.py  importBody.py  preCheck.py
spotlight/merge/: merge.py  setkey.py
spotlight/modify/: applyDC.py  automanual.py  createSigned.py  createUnsigned.py  dropColumn.py  dropDuplicate.py  excelNum.py  fillna.py  killComma.py  m100.py  minus.py  modify.py  removeD.py  replace.py
spotlight/old/: 00 LEAD.xlsx  23 적재_txt2df2db_batch.py  31 검증_Table 후처리.sql  32 검증_DATA검증.sql  41 추출.sql  42 coa 2 db.py  90 기타_test.py  90 기타_데이터클렌징_tsv2df.py  90 기타_참고_검증_Table정합성.sql  91 기타_AMI 추가.py  91 기타_검증_ami 관련.sql
spotlight/read/: __init__.py  read.py
spotlight/recon/: calSum.py  groupby.py  pivot.py  recon.py  uniq.py
spotlight/save/: save.py  savePart.py  saveSplit.py  saveSplitFrText.py
spotlight/txt2db/: __init__.py  txt2db.py  txt2dbMulti.py  txt2dbWrap.py
spotlight/txt2db/mod/: dbcon.py  df2db.py  txt2df.py
