[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'Spotlight'
version = '0.0.1'
description = 'auto-preprocess GL to upload spotlight'
readme = "README.md"
authors = [
    {name ="Sgt. Park", email="kinphw@naver.com"},
]

#Except Built-in Module
dependencies = [
    "pandas >= 2.1.2",
    "tqdm >= 4.661",
    "numpy >= 1.26.2",
]


    